--- a/mod.conf
+++ b/mod.conf
@@ -1,3 +1,2 @@
 name = fastway
-depends = default,basic_materials,technic
-optional_depends = player_monoids
+depends = default,basic_materials,technic,player_monoids
